--- a/WeatherBZ/res/values-ro/strings.xml
+++ b/WeatherBZ/res/values-ro/strings.xml
@@ -175,7 +175,7 @@ Selectaţi locaţia manual"</string>
     <string name="dlg_set_as_home">Setaţi ca \"Oraş Acasă\"</string>
     <string name="settings_widgets_widget4x1_transparent_title">Fundal transparent</string> 
     <string name="settings_widgets_widget4x1_transparent_sum">Debifat pentru fundal implicit</string> 
-    <string name="settings_widgets_widget4x1_white_text_title">Culoare albă a textului</string> 
-    <string name="settings_widgets_widget4x1_white_text_sum">Debifat pentru text şi pictogramă vreme de culoare neagră</string>
+    <string name="settings_widgets_widget4x1_white_icon_title">Culoare albă a pictogramă</string> 
+    <string name="settings_widgets_widget4x1_white_icon_sum">Debifat pentru pictogramă vreme de culoare neagră</string>
     <string name="settings_widgets_widget4x1_data_title">Date extinse</string>  
 </resources>
