--- a/WeatherBZ/res/values/strings.xml
+++ b/WeatherBZ/res/values/strings.xml
@@ -141,8 +141,7 @@
     <string name="settings_show_weather_icons_summary">Show weather icons (instead of textual weather description) in 3-day forecast</string>
     <string name="settings_show_short_desc_title">Show short description</string>
     <string name="settings_show_short_desc_summary">Show short or full forecast description in widgets and 3-day forecast</string>
-    <string name="settings_notification_white_text_title">White notification text</string>
-    <string name="settings_notification_white_text_summary">Use white text and icons in notifications (for dark themes)</string>
+    <string name="settings_notification_text_color_summary">Notification text and icons color</string>    
     <string name="settings_notification_color_title">Statusbar symbol color</string>
     <string name="settings_category_widgets">Widgets settings</string>
     <string name="settings_category_widgets_sum">Widgets appearance and click actions</string>
