--- a/WeatherBZ/res/values-da/strings.xml
+++ b/WeatherBZ/res/values-da/strings.xml
@@ -18,7 +18,7 @@
   <string name="about_sunny">Solrigt</string>
   <string name="about_sunny_night">Solrig Aften</string>
   <string name="about_t_storms">Tordenbyger</string>
-  <string name="about_version">version</string>
+  <string name="about_version">Version</string>
   <string name="animation_preview">Eksempel på animationer</string>
   <string name="app_name">Vejr BZ</string>
   <string name="close">Luk</string>
@@ -34,18 +34,17 @@
   <string name="dlg_set_as_home">Indstil som \"Hjemby\"</string>
   <string name="download_video">Download video</string>
   <string name="end_time_title">Slutningen</string>
-  <string name="fetching_location">Lokaliserer \u2026</string>
+  <string name="fetching_location">Lokaliserer …</string>
   <string name="just_now">Lige nu</string>
   <string name="location_edit">Angiv bynavn</string>
   <string name="location_list">Steder</string>
   <string name="location_search">Søg efter placering</string>
   <string name="main_screen_text_color_summary">Tekstfarven på vejr info</string>
-  <string name="text_color_title">Tekstfarve</string>
   <string name="menu_settings">Indstillinger</string>
   <string name="menu_update">opdatering</string>
   <string name="network_error">Kunne ikke forbinde til serveren</string>
   <string name="new_version">Ny version</string>
-  <string name="no_provider">"Lokalisering mislykkedes, indstil placering manuelt"</string>
+  <string name="no_provider">Lokalisering mislykkedes, indstil placering manuelt</string>
   <string name="no_updates">Ingen nye versioner</string>
   <string name="not_now">Ikke nu</string>
   <string name="press_color_to_apply">Tryk på farve for at anvende</string>
@@ -74,8 +73,9 @@
   <string name="settings_category_widgets_sum">Widgets udseende og tryk handlinger</string>
   <string name="settings_check_updates_summary">Kontroller for opdateringer ved app start</string>
   <string name="settings_check_updates_title">Kontroller for opdateringer</string>
-  <string name="settings_notification_color_title">Statuslinie symbol farve</string>  
+  <string name="settings_notification_color_title">Statuslinie symbol farve</string>
   <string name="settings_notification_summary">Vis vejr info i notifikations området</string>
+  <string name="settings_notification_text_color_summary">Notifikation ikon- og tekstfarve</string>
   <string name="settings_notification_title">Vis Notifikation</string>
   <string name="settings_notification_type">Notifikationstype</string>
   <string name="settings_show_info_summary">Vis eller skjul brugerflade elementer</string>
@@ -121,25 +121,27 @@
   <string name="settings_widgets_widget4x2_wind_font_summary">Standard størrelse 14sp</string>
   <string name="settings_widgets_widget4x2_wind_font_title">Vind</string>
   <string name="start_time_title">Start</string>
+  <string name="text_color_title">Tekstfarve</string>
   <string name="updating">Opdaterer…</string>
   <string name="upgrade">Opgrader</string>
-  <string name="weather_feel">"Realfeel:"</string>
+  <string name="weather_feel">Realfeel:</string>
   <string name="weather_forecast_tom">Ingen data</string>
   <string name="weather_forecast_tom2">Ingen data</string>
   <string name="weather_forecast_tom3">Ingen data</string>
-  <string name="weather_humidity">"Fugtighed:"</string>
+  <string name="weather_humidity">Fugtighed:</string>
   <string name="weather_no_city">Ingen by</string>
   <string name="weather_no_conditions_data">Ingen vejrdata</string>
   <string name="weather_no_temp_data">-°</string>
-  <string name="weather_pressure">"Tryk:"</string>
-  <string name="weather_pressure_measure">"mm Hg"</string>
-  <string name="weather_visibility">"Sigtbarhed:"</string>
-  <string name="weather_visibility_measure">"m"</string>
-  <string name="weather_wind">"Vind:"</string>
-  <string name="weather_wind_measure">"m/s"</string>
+  <string name="weather_pressure">Tryk:</string>
+  <string name="weather_pressure_measure">mm Hg</string>
+  <string name="weather_visibility">Sigtbarhed:</string>
+  <string name="weather_visibility_measure">m</string>
+  <string name="weather_wind">Vind:</string>
+  <string name="weather_wind_measure">m/s</string>
   <string name="widget_name_large">Vejr BZ 4x2</string>
   <string name="widget_name_medium">Vejr BZ 4x1</string>
-  <string name="widget_name_medium_ext">Vejr BZ 4x1</string> 
+  <string name="widget_name_medium_ext">Vejr BZ 4x1</string>
+  <string name="widget_text_color_summary">Tekstfarve i widget</string>
   <string name="wind_e">Ø</string>
   <string name="wind_n">N</string>
   <string name="wind_ne">NØ</string>
@@ -196,4 +198,3 @@
   <string name="wt_partly_cloudy_wet_snow">Delvist overskyet og våd sne</string>
   <string name="wt_partly_cloudy_wet_snow_showers">Delvist overskyet og sludbyger</string>
 </resources>
-
