--- a/WeatherBZ/res/values-ru/strings.xml
+++ b/WeatherBZ/res/values-ru/strings.xml
@@ -76,9 +76,9 @@
     <string name="wt_mostly_clear_pos_rain">Преимущественно ясно, возможен дождь</string>
     <string name="wt_mostly_clear_pos_wet_snow">Преимущественно ясно, возможен мокрый снег</string>
     <string name="wt_mostly_clear_pos_snow">Преимущественно ясно, возможен снег</string>
-    <string name="wt_mostly_clear_pos_ts_rain">Преимущественно ясно, возможен дождь</string>
-    <string name="wt_mostly_clear_pos_ts_wet_snow">Преимущественно ясно, возможен мокрый снег</string>
-    <string name="wt_mostly_clear_pos_ts_snow">Преимущественно ясно, возможен снег</string>
+    <string name="wt_mostly_clear_pos_ts_rain">Преимущественно ясно, гроза с дождем</string>
+    <string name="wt_mostly_clear_pos_ts_wet_snow">Преимущественно ясно, гроза с мокрым снегом</string>
+    <string name="wt_mostly_clear_pos_ts_snow">Преимущественно ясно, гроза со снегом</string>
     <string name="wt_partly_cloudy">Переменная облачность</string>
     <string name="wt_partly_cloudy_l_rain">Переменная облачность, небольшой дождь</string>
     <string name="wt_partly_cloudy_l_wet_snow">Переменная облачность, небольшой мокрый снег</string>
@@ -89,9 +89,9 @@
     <string name="wt_partly_cloudy_rain">Переменная облачность, дождь</string>
     <string name="wt_partly_cloudy_wet_snow">Переменная облачность, мокрый снег</string>
     <string name="wt_partly_cloudy_snow">Переменная облачность, снег</string>
-    <string name="wt_partly_cloudy_pos_ts_rain">Переменная облачность, возможен дождь</string>
-    <string name="wt_partly_cloudy_pos_ts_wet_snow">Переменная облачность, возможен мокрый снег</string>
-    <string name="wt_partly_cloudy_pos_ts_snow">Переменная облачность, возможен снег</string>
+    <string name="wt_partly_cloudy_pos_ts_rain">Переменная облачность, гроза с дождем</string>
+    <string name="wt_partly_cloudy_pos_ts_wet_snow">Переменная облачность, гроза с мокрым снегом</string>
+    <string name="wt_partly_cloudy_pos_ts_snow">Переменная облачность, гроза со снегом</string>
     <string name="wt_cloudy">Облачно</string>
     <string name="wt_cloudy_l_rain">Облачно, небольшой дождь</string>
     <string name="wt_cloudy_l_wet_snow">Облачно, небольшой мокрый снег</string>
