--- a/WeatherBZ/res/values-hu/strings.xml
+++ b/WeatherBZ/res/values-hu/strings.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="donations__button_close">Bezár</string>
+    <string name="donations__flattr">Flattr</string>
+    <string name="donations__description">"Hasznosnak találod ezt az alkalmazást?
+Támogathatod a fejlsztést flattring-el vagy küldhetsz támogatást a Google Android Market-et használva!"</string>
+    <string name="donations__flattr_description">A Flattr 10 %-ot levesz havi díjként!</string>
+    <string name="donations__google_android_market">Google Android Market</string>
+    <string name="donations__google_android_market_not_supported_title">In-App Donations nem támogatott</string>
+    <string name="donations__google_android_market_not_supported">Az alkalmazáson belüli adományozás nem támogatott. A Google Android Market megfelelően van telepítve?</string>
+    <string name="donations__google_android_market_description">A Google része 30 % minden adományból!</string>
+    <string name="donations__google_android_market_donate_button">Adományozok!</string>
+    <string name="donations__google_android_market_text">Mennyi?</string>
+    <string name="donations__paypal">PayPal</string>
+    <string name="donations__paypal_description">Az adományozott összeget megválaszthatja a gombra való kattintás után.</string>
+    <string name="donations__thanks_dialog_title">Köszönöm!</string>
+    <string name="donations__thanks_dialog">"Köszönjük a támogatást!
+Nagyra értékeljük!"</string>
     <string name="app_name">Időjárás</string>
-    <string name="new_version">Új verzió</string>
-    <string name="no_updates">Nincs újabb verzió</string>
     <string name="close">Bezárás</string>
-    <string name="upgrade">Frissítés</string>
-    <string name="not_now">Most nem</string>
+    <string name="donate">Adományozás</string>
     <string name="settings_check_updates_title">Frissítések ellenőrzése</string>
     <string name="settings_check_updates_summary">Frissítések ellenőrzése indításkor</string>
     <string name="settings_category_app_update">Alkalmazás frissítés</string>
@@ -13,9 +26,9 @@
     <string name="widget_name_medium">Időjárás 4x1</string>
     <string name="widget_name_medium_ext">Időjárás 4x1</string>
     <string name="widget_name_large">Időjárás 4x2</string>
+    <string name="about_version">Verzió</string>
     <string name="about_author">Szerző</string>
     <string name="about_provider">Időjárás szolgáltató</string>
-    <string name="about_version">Verzió</string>
     <string name="about_copyright">Copyright</string>
     <string name="about_sunny">Napos</string>
     <string name="about_sunny_night">Tiszta</string>
@@ -45,10 +58,7 @@
     <string name="weather_wind">"Szél: "</string>
     <string name="weather_feel">"Hőérzet: "</string>
     <string name="weather_pressure">"Légnyomás: "</string>
-    <string name="weather_visibility">"Magasság: "</string>
-    <string name="weather_forecast_tom">Nincs adat</string>
-    <string name="weather_forecast_tom2">Nincs adat</string>
-    <string name="weather_forecast_tom3">Nincs adat</string>
+    <string name="weather_visibility">"Látótávolság: "</string>
     <string name="settings_category_update">Frissítési beállítások</string>
     <string name="settings_category_update_sum">Automatikus frissítés beállításai</string>
     <string name="settings_category_animation">Animáció beállítások</string>
@@ -67,60 +77,12 @@
     <string name="updating">Frissítés...</string>
     <string name="just_now">Most</string>
     <string name="fetching_location">Helymeghatározás...</string>
-
-    <string name="wt_clear">Tiszta</string>
-    <string name="wt_mostly_clear">Többnyire tiszta</string>
-    <string name="wt_mostly_clear_pos_rain">Többnyire tiszta, eső lehetséges</string>
-    <string name="wt_mostly_clear_pos_wet_snow">Többnyire tiszta, havaseső lehetséges</string>
-    <string name="wt_mostly_clear_pos_snow">Többnyire tiszta, hó lehetséges</string>
-    <string name="wt_mostly_clear_pos_ts_rain">Többnyire tiszta, helyenként zivatarok</string>
-    <string name="wt_mostly_clear_pos_ts_wet_snow">Többnyire tiszta, helyenként havazás</string>
-    <string name="wt_mostly_clear_pos_ts_snow">Többnyire tiszta, helyenként hó</string>
-    <string name="wt_partly_cloudy">Részben felhős</string>
-    <string name="wt_partly_cloudy_l_rain">Könnyű eső</string>
-    <string name="wt_partly_cloudy_l_wet_snow">Havaseső</string>
-    <string name="wt_partly_cloudy_l_snow">Gyenge havazás</string>
-    <string name="wt_partly_cloudy_showers">Zivatarok</string>
-    <string name="wt_partly_cloudy_wet_snow_showers">Hózáporok</string>
-    <string name="wt_partly_cloudy_snow_showers">Havazás</string>
-    <string name="wt_partly_cloudy_rain">Eső</string>
-    <string name="wt_partly_cloudy_wet_snow">Havaseső</string>
-    <string name="wt_partly_cloudy_snow">Hó</string>
-    <string name="wt_partly_cloudy_pos_ts_rain">Helyenként eső</string>
-    <string name="wt_partly_cloudy_pos_ts_wet_snow">Részben felhős</string>
-    <string name="wt_partly_cloudy_pos_ts_snow">Részben felhős</string>
-    <string name="wt_cloudy">Felhős</string>
-    <string name="wt_cloudy_l_rain">Könnyű eső</string>
-    <string name="wt_cloudy_l_wet_snow">Szemerkélés</string>
-    <string name="wt_cloudy_l_snow">Hószállingózás</string>
-    <string name="wt_cloudy_showers">Zivatarok</string>
-    <string name="wt_cloudy_wet_snow_showers">Hózáporok</string>
-    <string name="wt_cloudy_snow_showers">Hózáporok</string>
-    <string name="wt_cloudy_rain">Eső</string>
-    <string name="wt_cloudy_wet_snow">Eső</string>
-    <string name="wt_cloudy_snow">Havazás</string>
-    <string name="wt_cloudy_ts_rain">Zivatatok</string>
-    <string name="wt_cloudy_ts_wet_snow">Ónoseső</string>
-    <string name="wt_cloudy_ts_snow">Havazás</string>
-    <string name="wt_overcast">Borult</string>
-    <string name="wt_overcast_l_rain">Könnyű eső</string>
-    <string name="wt_overcast_l_wet_snow">Gyenge havazás</string>
-    <string name="wt_overcast_l_snow">Gyenge havazás</string>
-    <string name="wt_overcast_showers">Záprok</string>
-    <string name="wt_overcast_wet_snow_showers">Hózáporok</string>
-    <string name="wt_overcast_snow_showers">Hózáporok</string>
-    <string name="wt_overcast_rain">Eső</string>
-    <string name="wt_overcast_wet_snow">Eső,havaseső</string>
-    <string name="wt_overcast_snow">Hó</string>
-    <string name="wt_overcast_ts_rain">Eső</string>
-    <string name="wt_overcast_ts_wet_snow">Havaseső</string>
-    <string name="wt_overcast_ts_snow">Hó</string>
     <string name="conf_add_widget">Widget hozzáadás</string>
     <string name="conf_light_skin">Világos felület</string>
     <string name="conf_dark_skin">Sötét felület</string>
-    <string name="conf_choose_skin">Válasszon felületet</string> 
-    <string name="conf_name">Widget beállítások</string>   
-    <string name="download_video">Video letöltés</string> 
+    <string name="conf_choose_skin">Válasszon felületet</string>
+    <string name="conf_name">Widget beállítások</string>
+    <string name="download_video">Video letöltés</string>
     <string name="conf_no_background">Nincs háttér</string>
     <string name="settings_category_notification">Értesítés beállítás</string>
     <string name="settings_category_notification_sum">Időjárás értesítés beállítás</string>
@@ -128,7 +90,7 @@
     <string name="settings_notification_title">Értesítés kijelzés</string>
     <string name="settings_notification_summary">Időjárás kijelzés az értesítési területen</string>
     <string name="settings_update_wifi_only_title">Frissítés csak Wi-Fi-ről</string>
-    <string name="settings_update_wifi_only_summary">Az időjárás automatikus frissítése Wi-Fi kapcsolat esetén</string> 
+    <string name="settings_update_wifi_only_summary">Az időjárás automatikus frissítése Wi-Fi kapcsolat esetén</string>
     <string name="settings_update_roaming_title">Frissítés adatbarangoláskor</string>
     <string name="settings_update_roaming_summary">Időjárás frissítés adatbarangolás alatt.A szolgáltató költséget számolhat fel</string>
     <string name="settings_category_appearance">Megjelenítés</string>
@@ -137,17 +99,14 @@
     <string name="settings_show_temp_symbol_summary">Hőmérséklet egységet mutat/elrejt ( C a Celsius)</string>
     <string name="settings_show_weather_icons_title">Időjárás ikon</string>
     <string name="settings_show_weather_icons_summary">Időjárás ikonok (a szöveges leírás helyett) a 3 napos előrejelzésnél</string>
-    <string name="settings_show_short_desc_title">Rövid leírás</string>
-    <string name="settings_show_short_desc_summary">Rövid vagy hosszú leírás a widgetben a 3 napos előrejelzésnél</string>
-    <string name="settings_notification_text_summary">Értesítő szöveg és ikonok színe</string>   
+    <string name="settings_notification_text_color_summary">Az értesítő szöveg és ikonok színe</string>
     <string name="settings_notification_color_title">Értesítősáv színe</string>
-    <string name="settings_category_widgets">Widget  beállítások</string>
+    <string name="settings_category_widgets">Widget beállítások</string>
     <string name="settings_category_widgets_sum">Widgets megjelenés és érintési műveletek</string>
     <string name="settings_widgets_click_clock_title">Óra érintésekor</string>
     <string name="settings_widgets_click_clock_summary">Alkalmazás beállítások indítása</string>
     <string name="settings_widgets_click_weather_title">Időjárás érintésekor</string>
     <string name="settings_widgets_click_weather_summary">Alkalmazás indítása időjárás érintésekor (hőmérséklet)</string>
-
     <string name="settings_widgets_widget4x2_desc_font_title">Időjárás leírás</string>
     <string name="settings_widgets_widget4x2_desc_font_summary">Alapértelmezett érték 22sp</string>
     <string name="settings_widgets_widget4x2_clock_font_title">Óra</string>
@@ -164,7 +123,6 @@
     <string name="settings_widgets_widget4x2_wind_font_summary">Alapértelmezett érték 14sp</string>
     <string name="settings_widgets_widget4x2_custom_font_title">Egyéni betűméret</string>
     <string name="settings_widgets_widget4x2_custom_font_summary">Egyéni betűméret a widgethez</string>
-
     <string name="settings_show_info_title">Információ kijelzés</string>
     <string name="settings_show_info_summary">Felület elemeinek kijelzése/elrejtése</string>
     <string name="settings_notification_type">Értesítés típusa</string>
@@ -176,19 +134,27 @@
     <string name="end_time_title">Vége</string>
     <string name="dlg_select_action">Válasszon műveletet</string>
     <string name="dlg_go_to_forecast">Ugrás az időjárás lapra</string>
-    <string name="dlg_set_as_home">Beállítás \"Saját Város\"-nak </string>
+    <string name="dlg_set_as_home">Beállítás \"Saját Város\"-nak</string>
     <string name="wind_n">É</string>
     <string name="wind_ne">ÉK</string>
+    <string name="wind_nne">É-ÉK</string>
     <string name="wind_nw">ÉNY</string>
+    <string name="wind_nnw">É-ÉNY</string>
     <string name="wind_s">D</string>
     <string name="wind_se">DK</string>
+    <string name="wind_sse">D-DK</string>
     <string name="wind_sw">DNY</string>
+    <string name="wind_ssw">D-DNY</string>
     <string name="wind_e">K</string>
+    <string name="wind_ene">K-ÉK</string>
+    <string name="wind_ese">K-DK</string>
     <string name="wind_w">NY</string>
+    <string name="wind_wnw">NY-DNY</string>
+    <string name="wind_wsw">NY-DNY</string>
     <string name="settings_widgets_widget4x1_transparent_title">Átlátszó háttér</string>
     <string name="settings_widgets_widget4x1_transparent_sum">Alapértelmezett háttérhez ne jelölje ki</string>
-    <string name="settings_widgets_widget4x1_white_text_title">Fehér szöveg színr</string>
-    <string name="settings_widgets_widget4x1_white_text_sum">fekete szöveg és időjárás ikonhoz ne jelölje ki</string>
+    <string name="settings_widgets_widget4x1_white_icon_title">Fehér időjárás ikon</string>
+    <string name="settings_widgets_widget4x1_white_icon_sum">Fekete időjárás ikon esetén nincs kijelölve</string>
     <string name="settings_widgets_widget4x1_data_title">Időjárás adatok</string>
     <string name="dialog_color_picker">Szín választó</string>
     <string name="press_color_to_apply">Alkalmazáshoz nyomja meg a színt</string>
