--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -63,9 +63,6 @@
     <string name="updating">Обновление\u2026</string>
     <string name="just_now">Только что</string>
     <string name="fetching_location">Определение местоположения\u2026</string>
-    <string name="weather_wind_measure">" м/с"</string>
-    <string name="weather_pressure_measure">" мм.рт.ст"</string>
-    <string name="weather_visibility_measure">" м"</string>
     <string name="conf_add_widget">Добавить виджет</string>
     <string name="conf_light_skin">Светлый скин</string>
     <string name="conf_dark_skin">Темный скин</string>
@@ -128,16 +125,21 @@
     <string name="dlg_set_as_home">Как \"Основной город\"</string>
     <string name="wind_n">С</string>    
     <string name="wind_ne">СВ</string> 
-    <string name="wind_nne">ССВ</string>
+    <string name="wind_nne">С-СВ</string>
     <string name="wind_nw">СЗ</string>
-    <string name="wind_nnw">ССЗ</string> 
+    <string name="wind_nnw">С-СЗ</string> 
     <string name="wind_s">Ю</string> 
     <string name="wind_se">ЮВ</string> 
-    <string name="wind_sse">ЮЮВ</string> 
+    <string name="wind_sse">Ю-ЮВ</string> 
     <string name="wind_sw">ЮЗ</string>
-    <string name="wind_ssw">ЮЮЗ</string>  
+    <string name="wind_ssw">Ю-ЮЗ</string>  
     <string name="wind_e">В</string> 
-    <string name="wind_w">З</string>   
+    <string name="wind_ene">В-СВ</string>
+    <string name="wind_ese">В-ЮВ</string>
+    <string name="wind_w">З</string>  
+    <string name="wind_wnw">З-СЗ</string>
+    <string name="wind_wsw">З-ЮЗ</string>
+    <string name="wind_variable">Переменный</string>  
     <string name="settings_widgets_widget4x1_transparent_title">Прозрачный фон</string> 
     <string name="settings_widgets_widget4x1_transparent_sum">Снимите галочку для использования фона по умолчанию</string> 
     <string name="settings_widgets_widget4x1_white_icon_title">Белые иконки</string> 
@@ -147,5 +149,15 @@
   	<string name="press_color_to_apply">Нажмите на цвет для выбора</string> 
   	<string name="text_color_title">Цвет текста</string> 
   	<string name="main_screen_text_color_summary">Цвет текста главного окна программы</string> 
-  	<string name="widget_text_color_summary">Цвет текста виджета</string>           
+  	<string name="widget_text_color_summary">Цвет текста виджета</string> 
+    <string name="pressure_units">Единицы давления</string> 
+    <string name="pressure_units_mb">" мБ"</string>
+    <string name="pressure_units_mmhg">" мм.рт.ст."</string>
+    <string name="wind_speed_units">Единицы скорости ветра</string>   
+    <string name="wind_speed_units_mps">" м/с"</string>
+    <string name="wind_speed_units_kmph">" км/ч"</string>
+    <string name="wind_speed_units_mph">" миль/ч"</string> 
+    <string name="visibility_units">Единицы видимости</string>
+    <string name="visibility_units_m">" м"</string>
+    <string name="visibility_units_mi">" миль"</string>  	          
 </resources>
