--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -64,9 +64,6 @@
     <string name="updating">Updating\u2026</string>
     <string name="just_now">Just now</string>
     <string name="fetching_location">Getting your position\u2026</string>
-    <string name="weather_wind_measure">" m/s"</string>
-    <string name="weather_pressure_measure">" mm Hg"</string>
-    <string name="weather_visibility_measure">" m"</string>
     <string name="conf_add_widget">Add Widget</string>
     <string name="conf_light_skin">Light Skin</string>
     <string name="conf_dark_skin">Dark Skin</string>
@@ -128,17 +125,21 @@
     <string name="dlg_go_to_forecast">Go to forecast</string>
     <string name="dlg_set_as_home">Set as \"Home City\"</string>
     <string name="wind_n">N</string>    
-    <string name="wind_ne">NE</string> 
-    <string name="wind_nne">NNE</string> 
+    <string name="wind_ne">NE</string>  
+    <string name="wind_nne">N-NE</string> 
     <string name="wind_nw">NW</string> 
-    <string name="wind_nnw">NNW</string> 
+    <string name="wind_nnw">N-NW</string> 
     <string name="wind_s">S</string> 
     <string name="wind_se">SE</string> 
-    <string name="wind_sse">SSE</string>
+    <string name="wind_sse">S-SE</string>
     <string name="wind_sw">SW</string> 
-    <string name="wind_ssw">SSW</string> 
+    <string name="wind_ssw">S-SW</string> 
     <string name="wind_e">E</string> 
-    <string name="wind_w">W</string> 
+    <string name="wind_ene">E-NE</string>
+    <string name="wind_ese">E-SE</string>
+    <string name="wind_w">W</string>
+    <string name="wind_wnw">W-NW</string>
+    <string name="wind_wsw">W-SW</string>  
     <string name="settings_widgets_widget4x1_transparent_title">Transparent background</string> 
     <string name="settings_widgets_widget4x1_transparent_sum">Unchecked for default backround</string> 
     <string name="settings_widgets_widget4x1_white_icon_title">White weather icon</string> 
@@ -150,5 +151,14 @@
   	<string name="text_color_title">Text Color</string> 
   	<string name="main_screen_text_color_summary">The text color of main screen data</string> 
   	<string name="widget_text_color_summary">"The widget's text color"</string> 
-        
+    <string name="pressure_units">Pressure units</string> 
+    <string name="pressure_units_mb">" mb"</string>
+    <string name="pressure_units_mmhg">" mm Hg"</string>
+    <string name="wind_speed_units">Wind speed units</string>   
+    <string name="wind_speed_units_mps">" m/s"</string>
+    <string name="wind_speed_units_kmph">" km/h"</string>
+    <string name="wind_speed_units_mph">" mph"</string>
+    <string name="visibility_units">Visibility units</string>
+    <string name="visibility_units_m">" m"</string>
+    <string name="visibility_units_mi">" miles"</string>    
 </resources>
