--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Időjárás</string>
+    <string name="changelog">Changelog</string>
     <string name="close">Bezárás</string>
+    <string name="donate">Adományozás</string>
     <string name="settings_check_updates_title">Frissítések ellenőrzése</string>
     <string name="settings_check_updates_summary">Frissítések ellenőrzése indításkor</string>
     <string name="settings_category_app_update">Alkalmazás frissítés</string>
@@ -9,9 +11,9 @@
     <string name="widget_name_medium">Időjárás 4x1</string>
     <string name="widget_name_medium_ext">Időjárás 4x1</string>
     <string name="widget_name_large">Időjárás 4x2</string>
+    <string name="about_version">Verzió</string>
     <string name="about_author">Szerző</string>
     <string name="about_provider">Időjárás szolgáltató</string>
-    <string name="about_version">Verzió</string>
     <string name="about_copyright">Copyright</string>
     <string name="about_sunny">Napos</string>
     <string name="about_sunny_night">Tiszta</string>
@@ -36,11 +38,12 @@
     <string name="location_edit">Gépelje be a város nevét</string>
     <string name="weather_no_city">Nincs ilyen város</string>
     <string name="weather_no_conditions_data">Nincsenek időjárás adatok</string>
+    <string name="weather_no_temp_data">--°C</string>
     <string name="weather_humidity">"Páratartalom: "</string>
     <string name="weather_wind">"Szél: "</string>
     <string name="weather_feel">"Hőérzet: "</string>
     <string name="weather_pressure">"Légnyomás: "</string>
-    <string name="weather_visibility">"Magasság: "</string>
+    <string name="weather_visibility">"Látótávolság: "</string>
     <string name="settings_category_update">Frissítési beállítások</string>
     <string name="settings_category_update_sum">Automatikus frissítés beállításai</string>
     <string name="settings_category_animation">Animáció beállítások</string>
@@ -62,9 +65,9 @@
     <string name="conf_add_widget">Widget hozzáadás</string>
     <string name="conf_light_skin">Világos felület</string>
     <string name="conf_dark_skin">Sötét felület</string>
-    <string name="conf_choose_skin">Válasszon felületet</string> 
-    <string name="conf_name">Widget beállítások</string>   
-    <string name="download_video">Video letöltés</string> 
+    <string name="conf_choose_skin">Válasszon felületet</string>
+    <string name="conf_name">Widget beállítások</string>
+    <string name="download_video">Video letöltés</string>
     <string name="conf_no_background">Nincs háttér</string>
     <string name="settings_category_notification">Értesítés beállítás</string>
     <string name="settings_category_notification_sum">Időjárás értesítés beállítás</string>
@@ -72,7 +75,7 @@
     <string name="settings_notification_title">Értesítés kijelzés</string>
     <string name="settings_notification_summary">Időjárás kijelzés az értesítési területen</string>
     <string name="settings_update_wifi_only_title">Frissítés csak Wi-Fi-ről</string>
-    <string name="settings_update_wifi_only_summary">Az időjárás automatikus frissítése Wi-Fi kapcsolat esetén</string> 
+    <string name="settings_update_wifi_only_summary">Az időjárás automatikus frissítése Wi-Fi kapcsolat esetén</string>
     <string name="settings_update_roaming_title">Frissítés adatbarangoláskor</string>
     <string name="settings_update_roaming_summary">Időjárás frissítés adatbarangolás alatt.A szolgáltató költséget számolhat fel</string>
     <string name="settings_category_appearance">Megjelenítés</string>
@@ -81,15 +84,14 @@
     <string name="settings_show_temp_symbol_summary">Hőmérséklet egységet mutat/elrejt ( C a Celsius)</string>
     <string name="settings_show_weather_icons_title">Időjárás ikon</string>
     <string name="settings_show_weather_icons_summary">Időjárás ikonok (a szöveges leírás helyett) a 3 napos előrejelzésnél</string>
-    <string name="settings_notification_text_summary">Értesítő szöveg és ikonok színe</string>   
+    <string name="settings_notification_text_color_summary">Az értesítő szöveg és ikonok színe</string>
     <string name="settings_notification_color_title">Értesítősáv színe</string>
-    <string name="settings_category_widgets">Widget  beállítások</string>
+    <string name="settings_category_widgets">Widget beállítások</string>
     <string name="settings_category_widgets_sum">Widgets megjelenés és érintési műveletek</string>
     <string name="settings_widgets_click_clock_title">Óra érintésekor</string>
     <string name="settings_widgets_click_clock_summary">Alkalmazás beállítások indítása</string>
     <string name="settings_widgets_click_weather_title">Időjárás érintésekor</string>
     <string name="settings_widgets_click_weather_summary">Alkalmazás indítása időjárás érintésekor (hőmérséklet)</string>
-
     <string name="settings_widgets_widget4x2_desc_font_title">Időjárás leírás</string>
     <string name="settings_widgets_widget4x2_desc_font_summary">Alapértelmezett érték 22sp</string>
     <string name="settings_widgets_widget4x2_clock_font_title">Óra</string>
@@ -106,7 +108,6 @@
     <string name="settings_widgets_widget4x2_wind_font_summary">Alapértelmezett érték 14sp</string>
     <string name="settings_widgets_widget4x2_custom_font_title">Egyéni betűméret</string>
     <string name="settings_widgets_widget4x2_custom_font_summary">Egyéni betűméret a widgethez</string>
-
     <string name="settings_show_info_title">Információ kijelzés</string>
     <string name="settings_show_info_summary">Felület elemeinek kijelzése/elrejtése</string>
     <string name="settings_notification_type">Értesítés típusa</string>
@@ -118,23 +119,44 @@
     <string name="end_time_title">Vége</string>
     <string name="dlg_select_action">Válasszon műveletet</string>
     <string name="dlg_go_to_forecast">Ugrás az időjárás lapra</string>
-    <string name="dlg_set_as_home">Beállítás \"Saját Város\"-nak </string>
+    <string name="dlg_set_as_home">Beállítás \"Saját Város\"-nak</string>
     <string name="wind_n">É</string>
     <string name="wind_ne">ÉK</string>
+    <string name="wind_nne">É-ÉK</string>
     <string name="wind_nw">ÉNY</string>
+    <string name="wind_nnw">É-ÉNY</string>
     <string name="wind_s">D</string>
     <string name="wind_se">DK</string>
+    <string name="wind_sse">D-DK</string>
     <string name="wind_sw">DNY</string>
+    <string name="wind_ssw">D-DNY</string>
     <string name="wind_e">K</string>
+    <string name="wind_ene">K-ÉK</string>
+    <string name="wind_ese">K-DK</string>
     <string name="wind_w">NY</string>
+    <string name="wind_wnw">NY-DNY</string>
+    <string name="wind_wsw">NY-DNY</string>
     <string name="settings_widgets_widget4x1_transparent_title">Átlátszó háttér</string>
     <string name="settings_widgets_widget4x1_transparent_sum">Alapértelmezett háttérhez ne jelölje ki</string>
-    <string name="settings_widgets_widget4x1_white_text_title">Fehér szöveg színr</string>
-    <string name="settings_widgets_widget4x1_white_text_sum">fekete szöveg és időjárás ikonhoz ne jelölje ki</string>
+    <string name="settings_widgets_widget4x1_white_icon_title">Fehér időjárás ikon</string>
+    <string name="settings_widgets_widget4x1_white_icon_sum">Fekete időjárás ikon esetén nincs kijelölve</string>
     <string name="settings_widgets_widget4x1_data_title">Időjárás adatok</string>
     <string name="dialog_color_picker">Szín választó</string>
     <string name="press_color_to_apply">Alkalmazáshoz nyomja meg a színt</string>
     <string name="text_color_title">Szöveg szín</string>
     <string name="main_screen_text_color_summary">A főképernyő adatainak szöveg színe</string>
     <string name="widget_text_color_summary">Widgetek szöveg színe</string>
+    <string name="pressure_units">Légnyomás mértékegysége</string> 
+    <string name="pressure_units_mb">" mb"</string>
+    <string name="pressure_units_mmhg">" mm Hg"</string>
+    <string name="wind_speed_units">Szélsebesség mértékegysége</string>   
+    <string name="wind_speed_units_mps">" m/s"</string>
+    <string name="wind_speed_units_kmph">" km/h"</string>
+    <string name="wind_speed_units_mph">" mph"</string>
+    <string name="visibility_units">Látótávolság mértékegysége</string>
+    <string name="visibility_units_m">" m"</string>
+    <string name="visibility_units_mi">" mérföld"</string>
+    <string name="temperature_units">Hőmérséklet mértékegysége</string>
+    <string name="temperature_units_c">Celsius</string>
+    <string name="temperature_units_f">Fahrenheit</string>       
 </resources>
