--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -34,9 +34,29 @@
   <string name="dlg_select_action">Vælg en handling</string>
   <string name="dlg_set_as_home">Indstil som \"Hjemby\"</string>
   <string name="donate">Doner</string>
+  <string name="donations__button_close">Luk</string>
+  <string name="donations__description">"Finder du dette program nyttigt?
+Støt udviklingen ved at flattring det eller sende donationer til udvikleren!"</string>
+  <string name="donations__flattr">Flattr</string>
+  <string name="donations__flattr_description">Flattr tager 10% i månedlig gebyr!</string>
+  <string name="donations__google_android_market">Google Play Store</string>
+  <string name="donations__google_android_market_description">Google tager 30% fra hver donation!</string>
+  <string name="donations__google_android_market_donate_button">Donér!</string>
+  <string name="donations__google_android_market_not_supported">In-App donationer er ikke understøttet. Er Google Play Butik installeret korrekt?</string>
+  <string name="donations__google_android_market_not_supported_title">In-App donationer er ikke understøttet</string>
+  <string name="donations__google_android_market_text">Hvor meget?</string>
+  <string name="donations__paypal">PayPal</string>
+  <string name="donations__paypal_currency_code">USD</string>
+  <string name="donations__paypal_description">Du kan vælge hvor meget du vil donere efter du har trykket på knappen</string>
+  <string name="donations__paypal_item_name">InApp Donation</string>
+  <string name="donations__paypal_user">az.burgerz@gmail.com</string>
+  <string name="donations__thanks_dialog">"Tak fordi du donerede!
+Jeg sætter virkelig pris på dette!"</string>
+  <string name="donations__thanks_dialog_title">Tak!</string>
   <string name="download_video">Download video</string>
   <string name="end_time_title">Slutningen</string>
   <string name="fetching_location">Lokaliserer …</string>
+  <string name="ga_trackingId">UA-38673998-1</string>
   <string name="just_now">Lige nu</string>
   <string name="location_edit">Angiv bynavn</string>
   <string name="location_list">Steder</string>
@@ -45,8 +65,12 @@
   <string name="menu_settings">Indstillinger</string>
   <string name="menu_update">opdatering</string>
   <string name="network_error">Kunne ikke forbinde til serveren</string>
-  <string name="no_provider">Lokalisering mislykkedes, indstil placering manuelt</string>
+  <string name="no_provider">"Kalisering mislykkedes
+Vælg placering manuelt"</string>
   <string name="press_color_to_apply">Tryk på farve for at anvende</string>
+  <string name="pressure_units">Tryk enheder</string>
+  <string name="pressure_units_mb">" mb"</string>
+  <string name="pressure_units_mmhg">" mm Hg"</string>
   <string name="quiet_hours_enabled">Aktiver Stille timer</string>
   <string name="quiet_hours_enabled_off">Opdateringer vil fungere som normalt</string>
   <string name="quiet_hours_enabled_on">Stille timer aktiveret</string>
@@ -118,8 +142,14 @@
   <string name="settings_widgets_widget4x2_wind_font_summary">Standard størrelse 14sp</string>
   <string name="settings_widgets_widget4x2_wind_font_title">Vind</string>
   <string name="start_time_title">Start</string>
+  <string name="temperature_units">Temperatur enhed</string>
+  <string name="temperature_units_c">Celsius</string>
+  <string name="temperature_units_f">Fahrenheit</string>
   <string name="text_color_title">Tekstfarve</string>
   <string name="updating">Opdaterer…</string>
+  <string name="visibility_units">Sigtbarhed enheder</string>
+  <string name="visibility_units_m">" m"</string>
+  <string name="visibility_units_mi">" mil"</string>
   <string name="weather_feel">Realfeel:</string>
   <string name="weather_forecast_empty">--</string>
   <string name="weather_humidity">Fugtighed:</string>
@@ -127,26 +157,31 @@
   <string name="weather_no_conditions_data">Ingen vejrdata</string>
   <string name="weather_no_temp_data">-°</string>
   <string name="weather_pressure">Tryk:</string>
-  <string name="weather_pressure_measure">mm Hg</string>
   <string name="weather_visibility">Sigtbarhed:</string>
-  <string name="weather_visibility_measure">m</string>
   <string name="weather_wind">Vind:</string>
-  <string name="weather_wind_measure">m/s</string>
   <string name="widget_name_large">Vejr BZ 4x2</string>
   <string name="widget_name_large_v5">Vejr BZ 4x2</string>
   <string name="widget_name_medium">Vejr BZ 4x1</string>
   <string name="widget_name_medium_ext">Vejr BZ 4x1</string>
   <string name="widget_text_color_summary">Tekstfarve i widget</string>
   <string name="wind_e">Ø</string>
+  <string name="wind_ene">Ø-NØ</string>
+  <string name="wind_ese">Ø-SØ</string>
   <string name="wind_n">N</string>
   <string name="wind_ne">NØ</string>
-  <string name="wind_nne">NNØ</string>
-  <string name="wind_nnw">NNV</string>
+  <string name="wind_nne">N-NØ</string>
+  <string name="wind_nnw">N-NV</string>
   <string name="wind_nw">NV</string>
   <string name="wind_s">S</string>
   <string name="wind_se">SØ</string>
-  <string name="wind_sse">SSØ</string>
-  <string name="wind_ssw">SSV</string>
+  <string name="wind_speed_units">Vindhastighed enhed</string>
+  <string name="wind_speed_units_kmph">" km/t"</string>
+  <string name="wind_speed_units_mph">" mph"</string>
+  <string name="wind_speed_units_mps">" m/s"</string>
+  <string name="wind_sse">S.SØ</string>
+  <string name="wind_ssw">S-SV</string>
   <string name="wind_sw">SV</string>
   <string name="wind_w">V</string>
+  <string name="wind_wnw">V-NV</string>
+  <string name="wind_wsw">V-SV</string>
 </resources>
