--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -47,6 +47,9 @@
   <string name="network_error">Kunne ikke forbinde til serveren</string>
   <string name="no_provider">Lokalisering mislykkedes, indstil placering manuelt</string>
   <string name="press_color_to_apply">Tryk på farve for at anvende</string>
+  <string name="pressure_units">Tryk enhed</string>
+  <string name="pressure_units_mb">" mb"</string>
+  <string name="pressure_units_mmhg">" mm Hg"</string>
   <string name="quiet_hours_enabled">Aktiver Stille timer</string>
   <string name="quiet_hours_enabled_off">Opdateringer vil fungere som normalt</string>
   <string name="quiet_hours_enabled_on">Stille timer aktiveret</string>
@@ -118,12 +121,20 @@
   <string name="settings_widgets_widget4x2_wind_font_summary">Standard størrelse 14sp</string>
   <string name="settings_widgets_widget4x2_wind_font_title">Vind</string>
   <string name="start_time_title">Start</string>
+  <string name="temperature_units">Temperatur enhed</string>
+  <string name="temperature_units_c">Celsius</string>
+  <string name="temperature_units_f">Fahrenheit</string>
   <string name="text_color_title">Tekstfarve</string>
   <string name="updating">Opdaterer…</string>
+  <string name="visibility_units">Sigtbarhed enhed</string>
+  <string name="visibility_units_m">" m"</string>
+  <string name="visibility_units_mi">" mil"</string>
   <string name="weather_feel">Realfeel:</string>
+  <string name="weather_forecast_empty">--</string>
   <string name="weather_humidity">Fugtighed:</string>
   <string name="weather_no_city">Ingen by</string>
   <string name="weather_no_conditions_data">Ingen vejrdata</string>
+  <string name="weather_no_temp_data">-°</string>
   <string name="weather_pressure">Tryk:</string>
   <string name="weather_visibility">Sigtbarhed:</string>
   <string name="weather_wind">Vind:</string>
@@ -133,15 +144,23 @@
   <string name="widget_name_medium_ext">Vejr BZ 4x1</string>
   <string name="widget_text_color_summary">Tekstfarve i widget</string>
   <string name="wind_e">Ø</string>
+  <string name="wind_ene">Ø-NØ</string>
+  <string name="wind_ese">Ø-SØ</string>
   <string name="wind_n">N</string>
   <string name="wind_ne">NØ</string>
-  <string name="wind_nne">NNØ</string>
+  <string name="wind_nne">N-NØ</string>
+  <string name="wind_nnw">N-NV</string>
   <string name="wind_nw">NV</string>
-  <string name="wind_nnw">NNV</string>
   <string name="wind_s">S</string>
   <string name="wind_se">SØ</string>
-  <string name="wind_sse">SSØ</string>
+  <string name="wind_speed_units">Vindhastighed enhed</string>
+  <string name="wind_speed_units_kmph">" km/t"</string>
+  <string name="wind_speed_units_mph">" mph"</string>
+  <string name="wind_speed_units_mps">" m/s"</string>
+  <string name="wind_sse">S-SØ</string>
+  <string name="wind_ssw">S-SV</string>
   <string name="wind_sw">SV</string>
-  <string name="wind_ssw">SSV</string>
   <string name="wind_w">V</string>
+  <string name="wind_wnw">V-NV</string>
+  <string name="wind_wsw">V-SV</string>
 </resources>
