--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -82,6 +82,16 @@
     <string name="settings_update_roaming_summary">Автоматически обновлять прогноз погоды в роуминге. Это может увеличить ваши расходы по оплате счетов сотовой связи</string>
     <string name="settings_category_appearance">Внешний вид</string>
     <string name="settings_category_appearance_sum">Настройки единиц измерения, цвета текста и т.д.</string>
+    <string name="settings_category_miui">Прошивки MIUI</string>
+    <string name="settings_category_miui_sum">Настройки для прошивок MIUI, очистка погодных данных MIUI</string>
+    <string name="settings_miui_support_summary">Включает поддержку встроенных виджетов MIUI</string>
+    <string name="settings_miui_support_title">Виджеты MIUI</string>
+	<string name="settings_miui_v5_summary">Включите, если у вас прошивка MIUI v5</string>
+    <string name="settings_miui_v5_title">Прошивка MIUI v5</string>    
+    <string name="clear_miui_data">Очистка базы MIUI</string>
+    <string name="clear_miui_data_summary">Очищает базу данных WeatherProvider MIUI</string>
+    <string name="clear_miui_data_dialog">Очистка базы MIUI</string>
+    <string name="clear_miui_data_dialog_text">Очистка базы данных погоды MIUI завершена!</string>
     <string name="settings_show_temp_symbol_title">Символ температуры</string>
     <string name="settings_show_temp_symbol_summary">Показывать символ температуры (буква C для градусов Цельсия)</string>
     <string name="settings_show_weather_icons_title">Иконки погоды</string>
